[gd_scene load_steps=17 format=3 uid="uid://bh4oh8jasy0qv"]

[ext_resource type="Script" path="res://main/scripts/Insect.gd" id="1_fppwp"]
[ext_resource type="Texture2D" uid="uid://bgg0eketig811" path="res://assets/inimigo1/gustavo1.png" id="2_dosef"]
[ext_resource type="PackedScene" uid="uid://07bodgbfi3i8" path="res://main/scenes/generic/HitboxComponent.tscn" id="3_ocqfk"]
[ext_resource type="PackedScene" uid="uid://bdre7ohepr58m" path="res://main/scenes/generic/HealthComponent.tscn" id="4_8qe7c"]
[ext_resource type="PackedScene" uid="uid://ttcr6hqr3f3f" path="res://main/scenes/generic/EnemyAttackComponent.tscn" id="6_auonp"]
[ext_resource type="Script" path="res://main/scripts/AttackRangeComponent.gd" id="7_seqgh"]
[ext_resource type="PackedScene" uid="uid://cct5qbakh68td" path="res://main/scenes/generic/HealthBar.tscn" id="8_2mymm"]

[sub_resource type="Animation" id="Animation_16gfy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_dosef")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprites:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprites:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_d8mss"]
resource_name = "attacking"
length = 0.6
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_dosef")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprites:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprites:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(-8, 4), Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprites:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_q5ibj"]
resource_name = "hurt"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_dosef")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprites:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprites:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.854902, 0.529412, 0.239216, 1)]
}

[sub_resource type="Animation" id="Animation_wf7pu"]
resource_name = "running"
length = 0.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_dosef")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprites:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprites:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dgxy0"]
_data = {
"RESET": SubResource("Animation_16gfy"),
"attack": SubResource("Animation_d8mss"),
"hurt": SubResource("Animation_q5ibj"),
"run": SubResource("Animation_wf7pu")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_jc0g6"]
radius = 14.0357

[sub_resource type="CircleShape2D" id="CircleShape2D_pd2kd"]
radius = 24.1868

[sub_resource type="CircleShape2D" id="CircleShape2D_le8g0"]
radius = 27.0185

[sub_resource type="CircleShape2D" id="CircleShape2D_hbpfg"]
radius = 16.0

[node name="Insect" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 33
script = ExtResource("1_fppwp")

[node name="Player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dgxy0")
}

[node name="Body" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(1, -1)
shape = SubResource("CircleShape2D_jc0g6")

[node name="AttackCooldown" type="Timer" parent="."]

[node name="HealthComponent" parent="." instance=ExtResource("4_8qe7c")]
MAX_HEALTH = 70.0

[node name="AttackRangeComponent" type="Area2D" parent="."]
visible = false
collision_layer = 0
script = ExtResource("7_seqgh")

[node name="range" type="CollisionShape2D" parent="AttackRangeComponent"]
shape = SubResource("CircleShape2D_pd2kd")
debug_color = Color(0.2, 0.619608, 0.482353, 0.419608)

[node name="AttackComponent" parent="." instance=ExtResource("6_auonp")]
visible = false
position = Vector2(-30, 0)
collision_mask = 32
DAMAGE = 5.0
KNOCK_BACK_FORCE = 20.0

[node name="attack" type="CollisionShape2D" parent="AttackComponent"]
position = Vector2(30, 0)
shape = SubResource("CircleShape2D_le8g0")
debug_color = Color(0.490196, 0.541176, 0.615686, 0.419608)

[node name="Sprites" type="Sprite2D" parent="."]
position = Vector2(1, 1)
texture = ExtResource("2_dosef")
hframes = 2

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="HealthBar" parent="." node_paths=PackedStringArray("parent") instance=ExtResource("8_2mymm")]
offset_left = -22.0
offset_top = -27.0
offset_right = 18.0
offset_bottom = -25.0
parent = NodePath("..")

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("HEALT_COMPONENT") instance=ExtResource("3_ocqfk")]
visible = false
HEALT_COMPONENT = NodePath("../HealthComponent")

[node name="collision" type="CollisionShape2D" parent="HitboxComponent"]
visible = false
shape = SubResource("CircleShape2D_hbpfg")
debug_color = Color(0.92549, 0.196078, 0.482353, 0.419608)

[connection signal="animation_finished" from="Player" to="." method="_on_player_animation_finished"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="damage_recieved" from="HealthComponent" to="HealthBar" method="_on_health_component_damage_recieved"]
[connection signal="body_entered" from="AttackRangeComponent" to="AttackRangeComponent" method="_on_body_entered"]
[connection signal="body_exited" from="AttackRangeComponent" to="AttackRangeComponent" method="_on_body_exited"]
[connection signal="area_exited" from="AttackComponent" to="AttackComponent" method="_on_area_exited"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_invincibility_timer_timeout"]
[connection signal="damage_recieved" from="HitboxComponent" to="." method="_on_hitbox_component_damage_recieved"]
